--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,8 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8" />
-        <title></title>
+        <title>Avocado Calculator</title>
+	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,900" rel="stylesheet">
         <link rel="stylesheet"   href="/css/avos.css" type="text/css" media="all" />
 		
         <script src="/js/avos.js"></script>
@@ -15,10 +16,23 @@
                 <header id="global-header">
 		    <div class="row">
 			<h1>How Many Avos!?</h1>
+			<p>Seriously though. How many avocados do you have to not eat in order to buy a house in your electorate?</p>
 		    </div>
                 </header>
             </main>
 
+
+
+	    <div class="calculator row">
+		<p>Which electorate do you live in?</p>
+
+		<p>
+		    <input name="" type="text" value=""/>
+		</p>
+		
+	    </div>
+	    
+	    
         </div>  <!-- ENDS .page-wrap -->
 
         <footer id="global-footer">
@@ -29,3 +43,4 @@
 
     </body>
 </html>
+
