--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,7 +27,10 @@
 		<p>Which electorate do you live in?</p>
 
 		<p>
-		    <input name="" type="text" value=""/>
+		    <input
+			id="electorateSelector" 
+			type="text" placeholder="My Electorate" class=""
+		    />		    			
 		</p>
 		
 	    </div>
