start to add the calculations

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -41,7 +41,8 @@
                 <p>
                     <input
                         id="avoPrice"
-                        type="text" placeholder="2.99" class=""
+                        type="text"  class=""
+			value="2.99"
                     />
                 </p>
 
