fade in story when we first run the calculation

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -49,7 +49,7 @@
 		
             </div>
 
-	    <div class="story-container row">
+	    <div class="story-container row hidden">
 		<h2>So we ran the numbers for you...</h2>
 		<p>To buy a house of average value in your electorate you will need to not buy <span class="avo-total-avos"></span> avocados.</p>
 		<p>So you'll be fine if you reduce your avocado diet by <span class="avo-months"></span> per month.
