add tracking, alter footer

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,17 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,900" rel="stylesheet">
         <link rel="stylesheet"   href="/css/avos.css" type="text/css" media="all" />
 
+        <script>
+         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                                  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+         ga('create', 'UA-19692218-25', 'auto'); 
+         ga('send', 'pageview');
+
+        </script>
+
         <script src="/js/avos.js"></script>
     </head>
     <body>
@@ -14,12 +25,18 @@
             <main class="site-content">
 
                 <header id="global-header">
-                    <div class="row">
-                        <h1>How Many Avos!?</h1>
-                        <p>Seriously though. How many avocados do you have to not eat in order to buy a house in your electorate?</p>
+                    <div class="logo-container">
+                        <img src="/img/logo-2-web.png"
+                             alt="How Many Avos"/>
                     </div>
                 </header>
+
             </main>
+
+            <div class="row">
+                <h1>How Many Avos!?</h1>
+                <p>Seriously though. How many avocados do you have to not eat in order to buy a house in your electorate?</p>
+            </div>
 
             <div class="calculator row">
                 <p>Which electorate do you live in?</p>
@@ -34,7 +51,6 @@
                     </span>
                 </p>
 
-
                 <p>
                     How much is an vocado at  your local?
                 </p>
@@ -43,7 +59,7 @@
                     <input
                         id="avoPrice"
                         type="text"  class=""
-value="2.99"
+                        value="2.99"
                     />
                     <span class="error  error-avoprice  hidden">
                         You need to have something here.
@@ -72,7 +88,9 @@ value="2.99"
 
         <footer id="global-footer">
             <div class="row">
-                <h3>in the footer</h3>
+                <p>
+                    By <a href="http://sunil.co.nz" target="_blank">Sunil</a>
+                </p>
             </div>
         </footer>
 
