start to make teh pretty

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,7 @@
                                   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-         ga('create', 'UA-19692218-25', 'auto'); 
+         ga('create', 'UA-19692218-25', 'auto');
          ga('send', 'pageview');
 
         </script>
@@ -25,16 +25,10 @@
             <main class="site-content">
 
                 <header id="global-header">
-                    <div class="logo-container">
-                        <img src="/img/logo-2-web.png"
-                             alt="How Many Avos"/>
-                    </div>
+		    <h1>How Many Avos?</h1>
                 </header>
 
-            </main>
-
             <div class="row">
-                <h1>How Many Avos!?</h1>
                 <p>Seriously though. How many avocados do you have to not eat in order to buy a house in your electorate?</p>
             </div>
 
@@ -83,6 +77,8 @@
                     That's only <span class="avo-breakfast-freq-week"></span> fewer avo breakfasts per week!
                 </p>
             </div>
+
+	    </main>
 
         </div>  <!-- ENDS .page-wrap -->
 
