lots of small design tweaks

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -69,8 +69,7 @@
             <div class="story-container row hidden">
                 <h2>So we ran the numbers for you...</h2>
                 <p>To buy a house of average value in your electorate you will need to not buy <span class="avo-total-avos"></span> avocados.</p>
-                <p>So you'll be fine if you reduce your avocado diet by <span class="avo-months"></span> per month.
-                    Or <span class="avo-week"></span> avocados per week.</p>
+                <p>So you'll be fine if you reduce your avocado diet by <span class="avo-months"></span> per month for the next year.  Or <span class="avo-week"></span> avocados per week.</p>
 
                 <p>
                     At my local cafe an avocado-on-toast breakfast costs $14.99. If it's the same in your neighbourhood, then you should be fine as long as you cut down on <span class="avo-breakfast-freq-annual"></span> avo breakfasts per year.
@@ -84,8 +83,8 @@
 
         <footer id="global-footer">
             <div class="row">
-                <p>
-                    By <a href="http://sunil.co.nz" target="_blank">Sunil</a>
+                <p style="font-size: 12px">
+		    watch this space
                 </p>
             </div>
         </footer>
